fix in featured example names and  alignment of some buttons

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -118,8 +118,8 @@
   display: inline-block;
   float: left;
   font-weight: 600;
-  margin-top: 10px;
-  max-height: 30px;
+  margin-top: 5px;
+  max-height: 50px;
   max-width: 150px;
   overflow: hidden;
   text-align: left;
